# snap

./: .gitignore  Cargo.toml  Makefile.toml  Packager.toml  README.md  README_INSTALLER.md  build-installers.ps1  snap-linux-x86_64  snap.nsi
.cargo/: config.toml
doc/: BUILD_INSTALLERS_WINDOWS_WSL.md  DISCORD_REFACTOR_GUIDE.md  GIT_HEALTH_STABILIZATION.md  REPAIR_GIT_ERRORS.md  SNAPSHOT_PURGE_AND_METADATA_GC_RETROSPECTIVE.md  documentation-solution-emptydir-speed.md  prompt-2 - Copy.txt  prompt-2.txt
scripts/: release-linux.sh  release-windows.ps1
src/: cli.rs  config.rs  git_health.rs  main.rs  utils.rs
src/commands/: delete.rs  diff.rs  doctor.rs  edit.rs  init.rs  list.rs  mod.rs  new.rs  options.rs  restore.rs  update.rs
src/os/: mod.rs  unix.rs  windows.rs
tests/: git_health.rs
wix/: main.wxs
