[package]
name = "snap"
version = "7.2.0" # Version bump for the final fix
authors = ["Your Name <you@example.com>"]   # ← Added for cargo-wix
edition = "2021"
description = "A blazing fast, Git-powered snapshot tool for developers."
license = "MIT"                             # ← Recognized SPDX license to enable EULA dialog

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
inquire = "0.7.5"
colored = "2.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
sha1 = "0.10.6"
chrono = "0.4.41"
walkdir = "2.5.0"
hex = "0.4.3"
shlex = "1.3.0"

# FINAL, CORRECT FIX: Add rayon for parallel processing
rayon = "1.10.0"

[package.metadata.wix]
# If you have an RTF EULA, point it here. Otherwise setting eula = false suppresses the warning.
eula = false
